# kedro-snowflake

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .spellcheck.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  dictionary.dic  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: prepare-release.yml  publish.yml  tests_and_publish.yml
docs/: conf.py  index.rst  spellcheck_exceptions.txt
docs/source/: 01_intro.md  02_installation.md  03_quickstart.rst  04_data_assets.rst  05_development.md  06_mlflow.md
kedro_snowflake/: cli.py  cli_functions.py  config.py  generator.py  misc.py  pipeline.py  runner.py  starters.py  utils.py
kedro_snowflake/datasets/: internal.py  native.py
kedro_snowflake/starters/snowflights/: cookiecutter.json  prompts.yml
kedro_snowflake/starters/snowflights/{{ cookiecutter.repo_name }}/: README.md
kedro_snowflake/starters/snowflights/{{ cookiecutter.repo_name }}/conf/base/: catalog.yml  snowflake.yml
kedro_snowflake/starters/snowflights/{{ cookiecutter.repo_name }}/conf/local/: credentials.yml
kedro_snowflake/starters/snowflights/{{ cookiecutter.repo_name }}/src/: requirements.txt
kedro_snowflake/starters/snowflights/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/: hooks.py  settings.py
kedro_snowflake/starters/snowflights/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/: mlflow_helpers.py
kedro_snowflake/starters/snowflights/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/data_processing/: nodes.py  pipeline.py
kedro_snowflake/starters/snowflights/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/data_science/: nodes.py  pipeline.py
tests/: conftest.py  test_cli.py  test_datasets.py  test_generator.py  test_utils.py  utils.py
tests/conf/local/: snowflake.yml
